--- a/src/App.css
+++ b/src/App.css
@@ -141,15 +141,19 @@ button:hover{
   background-color: #F3F7E4;
   border-radius: 50px;
   width: 400px;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
 }
-
+.card-img{
+  width: fit-content;
+}
 h3{
   font-family: 'Yeseva One', sans-serif;
   font-weight: 300;
+  margin: 20px;
 }
 p{
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 /* Contact */
