--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,15 @@ a{
   height: 400px;
   width: 400px;
 }
+.icon{
+  color: #FFA857;
+
+}
+
+.icon:hover{
+  color: #FDB777;
+}
+
 
 /* Footer */
 .end-notes{
