--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,9 @@
 .App-header {
   font-family: "Josefin Sans", sans-serif;
   text-align: center;
-}
-
-section {
-  padding: 0px;
-  margin: 20px;
-  width: 100%;
-}
-
-.App-header {
   background-color: #FFFFEC;
-  color: #1F1A12;
-  font-family: "Josefin Sans", sans-serif;
-  text-align: center;
-  min-height: 100vh;
-  display: flex;
+  min-height: 100vh; 
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
 }
 
@@ -29,65 +14,19 @@ h1{
 }
 
 /* Header */
-header {
-  display: flex;
-  align-items: left;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
+/* 
 #header{
   background-color: #EFEEDD;
-  margin: 0px;
-  align-items: left;
-}
-
-#logo {
-  height: 100px;
-  max-width:100%;
-}
-
-
-.nav-bar ul {
-  font-weight: 350;
-  font-size: 0.9em;
-  list-style-type: none;
-  display: flex;
-  gap: 1.8em;
-  padding: 20px;
-}
-
-.nav-bar a {
-  font-family: "Fraunces", serif;
-  color: #1F1A12;
-  text-decoration: none;
-  display: inline-block;
-  width: 90px;
-}
-.nav-bar #longer-nav{
-  width: 100px;
-}
-
-.nav-bar a:hover {
-  font-weight: 400;
-}
+} */
 
 /* Home */
-text{
+/* text{
   font-family: "Yeseva One", serif;
   fill: #095D40;
-  /* font-size: 38px; */
   font-size: 1.4em;
   font-weight: normal;
   padding-top: 0px;
-}
-#portrait {
-  height: 7em;
-  width: 7em;
-  border-radius: 50%;
-  object-fit: cover;
-  transform: scale(1.75);
-}
+} */
 #home p{
   padding-top: 60px;
 }
