--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ code {
   width: 0%; /* Start with 0 width */
   height: 1px;
   background-color: #F8E9DD; /* Matcha color */
-  transition: width 0.5s ease-in-out, background-color 1s; /* Smooth transition for width and color */
+  transition: width 0.6s ease-out, background-color 1s; /* Smooth transition for width and color */
 }
 
 .underline-hover:hover::before {
